# cppbot

./: CMakeLists.txt  README.md  bot.sh  main.cpp
